Add analytics tracker type selection
Google analytics is not the only tracker out there.

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -416,11 +416,11 @@ en:
   edit_general_settings: "Edit General Settings"
   general_settings_description: "Configure general Spree settings."
   google_analytics: "Google Analytics"
-  google_analytics_active: "Active"
+  analytics_active: "Active"
   google_analytics_create: "Create New Google Analytics Account"
-  google_analytics_id: "Analytics ID"
+  analytics_id: "Analytics ID"
   google_analytics_new: "New Google Analytics Account"
-  google_analytics_setting_description: "Manage Google Analytics ID."
+  analytics_setting_description: "Manage analytics trackers."
   guest_checkout: Guest Checkout
   guest_user_account: Checkout as a Guest
   has_no_shipped_units: has no shipped units
