Add support for Yandex.Metrics tracker

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1004,6 +1004,7 @@ en:
   what_is_this: "What's This?"
   whats_this: "What's this"
   width: Width
+  yandex_metrics: "Yandex.Metrics"
   year: "Year"
   you_have_been_logged_out: "You have been logged out."
   you_have_no_orders_yet: "You have no orders yet."
